# advent-of-code

2022/day-01/: puzzle.py
2022/day-02/: puzzle.py
2022/day-03/: puzzle.py
2022/day-04/: puzzle.py
2022/day-05/: puzzle.py
2022/day-06/: puzzle.py
2022/day-07/: puzzle.py
2022/day-08/: puzzle.py
2022/day-09/: puzzle.py
2022/day-10/: puzzle.py
2022/day-11/: puzzle.py
2022/day-12/: puzzle.py
2022/day-13/: puzzle.py
2022/day-14/: puzzle.py
2022/day-16/: puzzle.py
2022/day-17/: puzzle.py
2023/: .copier-answers.yml  Dockerfile  buildspec.yaml  poetry.toml  pyproject.toml
2023/.devcontainer/: devcontainer.json
2023/calendar/01/: 01_12_2023.py
2023/calendar/02/: 02_12_2023.py
2023/calendar/03/: 03_12_2023.py
2023/calendar/04/: 04_12_2023.py
2023/calendar/05/: 05_12_2023.py
2023/calendar/06/: 06_12_2023.py
2023/calendar/07/: 07_12_2023.py
2023/calendar/08/: 08_12_2023.py
2023/calendar/09/: 09_12_2023.py
2023/calendar/10/: 10_12_2023.py
2023/calendar/11/: 11_12_2023.py
2023/calendar/12/: 12_12_2023.py
2023/calendar/13/: 13_12_2023.py
2023/calendar/14/: 14_12_2023.py
2023/calendar/15/: 15_12_2023.py
2023/calendar/16/: 16_12_2023.py
2023/calendar/17/: 17_12_2023.py
2023/calendar/18/: 18_12_2023.py
2023/calendar/19/: 19_12_2023.py
2023/calendar/20/: 20_12_2023.py
2023/calendar/21/: 21_12_2023 copy.py  21_12_2023.py
2023/calendar/22/: 22_12_2023.py  support_dict.json
2023/calendar/23/: 23_12_2023.py
2023/calendar/24/: 24_12_2023.py  z3-solution.py
2023/calendar/25/: 25_12_2023.py
