[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "advent-2023"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
# NOTE: is poetry slow for you?
#  We found the most likely cause is dependencies not publishing metadata to PyPI.
#  To avoid a huge penalty use these minimum versions for packages you need:
#   - boto3>=1.18.58
#   - botocore>=1.21.65
#  -> To confirm your issue: https://sync.hudlnet.com/x/drGBEg
#  -> More details and solutions: https://sync.hudlnet.com/display/RD/qa/questions/2906
python = ">=3.9,<4.0"
pandas = "^2.1.3"
networkx = "^3.2.1"
shapely = "^2.0.2"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.12"
mypy = "^0.910"
py-spy = "^0.3.8"
pylint = "^2.9.6"
pytest = "^6.2.4"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "hudl"
url = "https://hudlaml-690616407375.d.codeartifact.us-east-1.amazonaws.com/pypi/hudlaml/simple/"
priority = "supplemental"

[tool.pylint.config]
disable = "logging-fstring-interpolation, missing-module-docstring"
enable = "unused-wildcard-import, unused-import, unused-variable"
max-line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
